<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity"
    android:orientation="vertical"
    android:background="@color/colorFragment_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_scrollable"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:src="@drawable/profile"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txtProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_profile"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNoti"
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:src="@drawable/noti_unselect"
            android:layout_alignParentStart="true"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txtNoti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_notification"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_toEndOf="@+id/imgNoti"
            android:layout_marginTop="@dimen/margin_8dp"
            tools:ignore="RelativeOverlap" />

        <vn.luongvo.widget.iosswitchview.SwitchView
            android:id="@+id/switchview"
            android:layout_width="@dimen/image_size_50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_8dp"
            app:checked = "true"
            app:color_on="@color/colorPrimary"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:src="@drawable/sound_onoff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sound"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:src="@drawable/location"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_location"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/linear_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/image_size_40dp"
            android:layout_height="@dimen/image_size_40dp"
            android:src="@drawable/language"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_language"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/layout_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/synchronize"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txt_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_synchronization"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/margin_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logout"/>

        <com.koekoetech.sayarma.custom_control.MyanTextView
            android:id="@+id/txtLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_logout"
            android:textSize="@dimen/txt_size_small"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_32dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"/>

</LinearLayout>