<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragment_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:id="@+id/activity_pass_code_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragment_bg"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/margin_4dp"
        app:cardElevation="@dimen/margin_2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCourses"
                android:layout_width="@dimen/image_size_100dp"
                android:layout_height="@dimen/image_size_100dp"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:src="@drawable/course_collection"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgCourses"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_16dp">

                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtCourses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_courses"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_large"/>

                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_courses"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginTop="@dimen/margin_10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnCourseSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgCourses"
                android:layout_marginTop="@dimen/margin_16dp"
                android:background="@drawable/courses_bg">
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtStartNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_courses"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_ex_large"/>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewServiceHotline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/service_hotline"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtServiceHotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_service_hotline"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSavedArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/saved_article"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtSavedArticles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_saved_articles"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewWomanWellness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/woman_wellness"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtWomenWellness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_women_wellness"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCurriculum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/curriculum"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtCurriculum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_curriculum"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUsefulApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/useful_app"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtUsefulApps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_useful_apps"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/margin_8dp"
            app:cardElevation="@dimen/margin_2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/margin_16dp"
                android:visibility="gone">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/image_size_80dp"
                    android:layout_height="@dimen/image_size_80dp"
                    android:src="@drawable/story_telling"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginBottom="@dimen/margin_16dp"/>
                <com.koekoetech.sayarma.custom_control.MyanTextView
                    android:id="@+id/txtStoryTelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_story_telling"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>
